--- a/src/Traningschool/train.css
+++ b/src/Traningschool/train.css
@@ -9,30 +9,35 @@
 display: flex;
 flex-direction: column;
 justify-content: center;
-padding: 70px 150px;
+padding: 12rem 40px;
 align-items: center;
 letter-spacing: 1px;
 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;0,800;0,900;1,600;1,700;1,800;1,900&display=swap');
 .digital-content h1{ 
+    font-family: 'Noto Sans', sans-serif;
     font-size: 8rem;
     text-align: center;
     font-weight: 900;
     }
 
     .digital-content .line {
-        border: 1.5px solid #51c6DA;
-       width: 10%;
+        border: 1.8px solid #51c6DA;
+       width: 12%;
        margin: 30px;
+       border-radius: 25px;
     }  
 
-    .digital-content p{ 
-        font-size: 2rem;
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,500;1,600&display=swap');    
+    
+      .digital-content p{ 
+        font-size: 1.5rem;
         text-align: center;
-        font-weight: lighter;
-        padding: 0px 140px 0px ;
-
+        font-weight: 500;
+        padding: 0px 280px ;
+        font-family: 'Noto Sans', sans-serif;
         }
 
 
@@ -46,24 +51,27 @@ letter-spacing: 1px;
             
             .digital-content { 
        
-            padding: 50px 80px;
+            padding: 50px 50px;
         
             }
             
             .digital-content h1{ 
-                font-size: 2rem;
+                font-size: 3rem;
                 text-align: center;
-                font-weight: 900;
+                font-weight: inherit;
+                font-family: inherit;
+                vertical-align: baseline;
+                border: 0;
                 }
             
                 .digital-content .line {
                     border: 1.5px solid #51c6DA;
-                   width: 10%;
+                   width: 40%;
                    margin: 30px;
                 }  
             
                 .digital-content p{ 
-                    font-size: 0.9rem;
+                    font-size: 1rem;
                     text-align: center;
                     font-weight: lighter;
                     padding: 0px 20px 0px ;
