--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -13,7 +13,7 @@ body, html {
     -webkit-font-smoothing: antialiased;
     font-size: 62.5%;
     scroll-behavior: smooth;
-    height: 200vh;
+    /* height: 1500vh; */
     overflow-x: hidden;
   }
 
@@ -38,20 +38,21 @@ li {
   height: 8rem;
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  box-shadow: transparent;
     /* background-color: #51c6DA; */
-    background-color: #000000;
+    background-color: #51c5dae8;
     position: fixed;
   z-index: 1;
+  -webkit-backface-visibility: hidden;
 }
 
 .logo {
   display: grid;
-  /* background-color: #3b5998; */
   grid-column: 2/3;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
+  background: #000000;
+
 }
 
 .menu-link {
@@ -63,6 +64,12 @@ li {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+
+
+.menu-link .link1 {
+  color: white;
 }
 
 .social-media {
@@ -108,7 +115,7 @@ li {
   text-transform: capitalize;
   /* color: rgba(0, 0, 3, 0.8); */
   transition: 0.5s;
-  color: white;
+  color: #000000;
   font-weight: 700;
   font-size: 1.3rem;
   text-transform: uppercase;
@@ -116,7 +123,6 @@ li {
 .menu-link ul li:hover > a {
   transform-origin: left;
   color: #ffffff;
-  text-decoration: underline;
   transition: 0.5s;
 }
 
@@ -129,13 +135,23 @@ li {
   display: none;
 }
 
-.facebook, .instagram, .linkedin, .youtube, .twitter {
-  color: #51c6DA;
+
+
+ .facebook, .instagram, .linkedin, .youtube, .twitter {
+  color: #000000;
 }
 
-/* .facebook, .instagram, .linkedin, .youtube, .twitter:hover {
+.icons {
+  transition: 1s;
+
+}
+
+.icons:hover {
+  transform: scale(1.3);
   color: #ffffff;
-} */
+  z-index: 2;
+  /* box-shadow: 2px 2px 2px #000;  */
+} 
 
 
 /* hero section   */
@@ -163,24 +179,30 @@ li {
   height: 100%;
   width: 100%; 
   object-fit: cover;
+  margin-top: 8rem;
 }
 
 .content {
   position: absolute;
   width: 100%;
   height: 100%;
-  top: 30%;
+  top: 40%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Mali:ital,wght@0,600;1,200;1,300;1,400;1,700&display=swap');
+
+
 .hero-section p {
-  font-size: 7rem;
+  font-size: 6rem;
   text-transform: capitalize;
   color: white;
-  font-weight: 100;
+  font-family: 'Mali', cursive;
+  font-weight: 500;
   /* z-index: 8;
   font-family: Mali;
   height: auto;
@@ -220,7 +242,9 @@ li {
   outline: none; *
   cursor: pointer;
   /* z-index: 10; */
-    background: #51c6DA;
+  font-family: 'Send Flowers', cursive;
+  font-weight: 200;
+  background: #51c6DA;
     height: auto;
     width: auto;
     color: rgb(255, 255, 255);
@@ -233,11 +257,10 @@ li {
     text-align: center;
     line-height: 36px;
     letter-spacing: 0px;
-    font-weight: 500;
     font-size: 20px;
     box-shadow: rgb(0 0 0 / 25%) 0px 7px 15px 0px;
     border-radius: 5px;
-    padding:15px 70px 15px 70px;
+    padding: 15px 50px 15px 50px;
     backdrop-filter: none;
     filter: brightness(100%);
     transform-origin: 50% 50%;
