--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&family=Send+Flowers&family=Tilt+Warp&display=swap');
-
-body {
-  /* font-family: 'Tilt Warp', cursive; */
-} 
 
 ::-webkit-scrollbar {
 
@@ -16,5 +11,5 @@ body {
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #000; 
+  background: #51c6DA; 
 }
