--- a/src/layouts/navbar.css
+++ b/src/layouts/navbar.css
@@ -1,24 +1,17 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
-
-
-body, 
+body,
 html {
   -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    font-size: 62.5%;
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-  }
-
-
-
+  -webkit-font-smoothing: antialiased;
+  font-size: 62.5%;
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
 
 a {
   text-decoration: none;
@@ -34,21 +27,21 @@ li {
 /* navbar style start  */
 
 .main-nav {
-      width: 100vw;
-      height: 6rem;
-      display: grid;
-      grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
-      box-shadow: transparent;
-      background: #18222d;
-      position: fixed;
-      z-index: 1;
-      -webkit-backface-visibility: hidden;
+  width: 100vw;
+  height: 6rem;
+  display: grid;
+  grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
+  box-shadow: transparent;
+  background: #18222d;
+  position: fixed;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
 }
 
 .logo {
   /* grid-column: 1/2; */
   display: grid;
-  grid-template-columns: 2fr repeat( 3, 1fr);
+  grid-template-columns: 2fr repeat(3, 1fr);
   justify-items: flex-start;
   align-items: center;
   /* padding: 10px; */
@@ -71,7 +64,7 @@ li {
   margin-left: 160px;
 }
 
-.links     {
+.links {
   display: flex;
   justify-content: space-evenly;
   padding: 8px;
@@ -116,7 +109,7 @@ li {
 }
 .menu-link ul li:hover > a {
   transform-origin: left;
-  color: #51c6DA;
+  color: #51c6da;
   transition: 0.5s;
 }
 
@@ -132,7 +125,7 @@ li {
   font-weight: 500;
 }
 
-.user  a {
+.user a {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -140,7 +133,7 @@ li {
 }
 
 .usericon {
-  color: red;
+  color: #fff;
   font-size: 2.5rem;
   margin: 0px 8px;
 }
@@ -157,12 +150,15 @@ li {
   align-items: center;
   color: #fff !important;
   height: 6rem !important;
-  padding: 20px  45px 0px 45px;
+  padding: 20px 45px 0px 45px;
   margin-left: 10px;
   font-size: 1.5rem;
   font-weight: 500;
-  border-left: 1.5px solid #fff;
+  background: #51c6da;
 }
+
+
+
 
 .social-media .hamburger-menu {
   display: none;
@@ -184,24 +180,19 @@ li {
 }
 
 @media (max-width: 1095px) {
-
   .hero-section video {
     height: 100%;
-    width: 100%; 
+    width: 100%;
     object-fit: cover;
   }
-  
+
   .content {
     position: absolute;
     top: 0%;
     margin: 0;
     padding: 0;
-   
   }
- 
 }
-
-
 
 /* responsive css style  */
 @media (max-width: 998px) {
@@ -270,12 +261,12 @@ li {
     align-items: center;
   }
   .hamburger-menu {
-  color: #51c6DA;
-}
+    color: #51c6da;
+  }
 
   .social-media .hamburger-menu {
     display: block;
-    font-size: .5rem;
+    font-size: 0.5rem;
   }
 }
 
@@ -329,5 +320,4 @@ li {
     display: block;
     font-size: 2.5rem;
   }
-
 }
